--- a/MetersWebApp/MetersWebApp.csproj
+++ b/MetersWebApp/MetersWebApp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-LandisWebApp-9304056F-35A8-447B-AA7E-32C35A648670</UserSecretsId>
+    <AssemblyName>MetersWebApp</AssemblyName>
   </PropertyGroup>
 
 
@@ -22,6 +23,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
