--- a/MetersWebApp/appsettings.json
+++ b/MetersWebApp/appsettings.json
@@ -1,7 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=5432;Database=Landis;User Id=admin;Password=1234;",
-        "LandisConnection": "Server=localhost;Port=5432;Database=Landis;User Id=admin;Password=1234;"
+        "DefaultConnection": "Server=localhost;Port=5432;Database=Landis;User Id=admin;Password=1234;"
     },
     "Logging": {
         "LogLevel": {
